# kISS

./: .gitmodules  CMakeLists.txt  README.md
experiment/: .gitignore  CMakeLists.txt  README.md  combined.csv  experiment_a.sh  experiment_b.sh  sa_20240407.csv  sa_20240407.sh  sa_20240408.csv  sa_20240408.sh  sa_20240409.csv  sa_20240409.sh  sa_20240410.csv  sa_20240410.sh  sa_20240410_2.csv  sa_20240410_2.sh  sa_20240412.csv  sa_20240412.sh
experiment/include/: utils.hpp
experiment/paper/: CHM13v2.0_each_step.py  CHM13v2.0_each_step_thread_2.py  CHM13v2.0_sa.py  combined_20240411.csv  each_step.py  each_step_thread.py  fmtree.csv  fmtree.py  fmtree_new.csv  sa.py  sa_new.csv  sa_new_20231024.csv  sa_thread_20231120.csv
experiment/src/: kiss-1.cpp  kiss-2.cpp  libsais.cpp  libsais_32bit.cpp  pardss.cpp  pardss_32bit.cpp  saca-k.cpp
include/biovoltron/algo/align/exact_match/: fm_index.hpp
include/biovoltron/algo/sort/: all.hpp  constant.hpp  kiss1_core.hpp  kiss1_sorter.hpp  kiss2_core.hpp  kiss2_sorter.hpp  kiss_common.hpp  kiss_new_sorter.hpp  kpsais_sorter.hpp  psais_sorter.hpp  sais_sorter.hpp  sorter.hpp  stable_sorter.hpp  structs.hpp  utils.hpp
include/biovoltron/algo/sort/core/: kiss_new.hpp  psais.hpp  sorter.hpp
include/biovoltron/algo/sort/core/libsais-sort/: constant.hpp  helper.hpp  sais.hpp  structs.hpp  utils.hpp
include/biovoltron/container/: xbit_vector.hpp
include/biovoltron/file_io/: fasta.hpp
include/biovoltron/file_io/core/: header.hpp  record.hpp  tuple.hpp
include/biovoltron/utility/: istring.hpp  thread_pool.hpp
include/biovoltron/utility/archive/: gzstream.hpp  serializer.hpp
include/command/: fmindex_build.hpp  fmindex_query.hpp  suffix_sort.hpp
include/utils/: constant.hpp  io.hpp  options.hpp
src/: main.cpp
tests/: CMakeLists.txt  kiss.cpp
